<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/imgLogo"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvsilahkan"
            android:text="@string/tv_silahkanlogin"
            android:layout_below="@id/imgLogo"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="@string/hint_Username"
            android:id="@+id/etusername"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/hint_Username"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_below="@id/tvsilahkan"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:autofillHints="@string/hint_Password"
            android:inputType="textPassword"
            android:id="@+id/etpasword"
            android:drawableStart="@drawable/ic_pasword"
            android:hint="@string/hint_Password"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etusername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

     <Button
         android:foreground="@drawable/btn_sign_in"
         android:background="@drawable/btn_sign_in"
         android:layout_centerHorizontal="true"
         android:id="@+id/btnmasuk"
         android:layout_below="@id/etpasword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCreatenewaccount"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@id/btnmasuk"
            android:textAlignment="center"
            android:text="@string/tv_Createaacount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</LinearLayout>